Revised indentation erros and run all cells

--- a/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
+++ b/Capítulo 04 - Estudo de caso - projeto de interface.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,9 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Hello!\n",
+      "Hello!\n",
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(4):\n",
     "    print('Hello!')"
@@ -561,9 +572,9 @@
     "\n",
     "<p>Este processo tem algumas desvantagens – veremos alternativas mais tarde – mas pode ser útil se você não souber de antemão como dividir o programa em funções. Esta abordagem permite criar o projeto no decorrer do trabalho.</p>\n",
     "\n",
-    "<h2 id=\"49---docstring\">4.9 - docstring</h2>\n",
+    "<h2 id=\"49---docstring\">4.9 - <i>docstring</i></h2>\n",
     "\n",
-    "<p>Uma <b>docstring</b> é uma string no início de uma função que explica a interface (“doc” é uma abreviação para “documentação”). Aqui está um exemplo:</p>\n",
+    "<p>Uma <b><i>docstring</i></b> é uma string no início de uma função que explica a interface (“doc” é uma abreviação para “documentação”). Aqui está um exemplo:</p>\n",
     "    </section>"
    ]
   },
@@ -630,7 +641,7 @@
     "<br><b>plano de desenvolvimento</b><br />\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;Um processo de escrever programas.\n",
     "<br />\n",
-    "<br><b>docstring</b><br />\n",
+    "<br><b><i>docstring</i></b><br />\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;Uma string que aparece no início de uma definição de função para documentar a interface da função.\n",
     "<br />\n",
     "<br><b>precondição</b><br />\n",
@@ -705,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
