--- a/Capítulo 08 - Strings.ipynb
+++ b/Capítulo 08 - Strings.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ">>> letter\n",
-    "'a'"
+    ">>> letter"
    ]
   },
   {
@@ -53,13 +63,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> letter = fruit[0]\n",
-    ">>> letter\n",
-    "'b'"
+    ">>> letter"
    ]
   },
   {
@@ -73,15 +93,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> i = 1\n",
-    ">>> fruit[i]\n",
-    "'a'\n",
-    ">>> fruit[i+1]\n",
-    "'n'"
+    ">>> fruit[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ">>> fruit[i+1]"
    ]
   },
   {
@@ -117,13 +165,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> fruit = 'banana'\n",
-    ">>> len(fruit)\n",
-    "6"
+    ">>> len(fruit)"
    ]
   },
   {
@@ -135,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,13 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> last = fruit[length-1]\n",
-    ">>> last\n",
-    "'a'"
+    ">>> last"
    ]
   },
   {
@@ -188,15 +256,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "index = 0\n",
     "while index < len(fruit):\n",
-    "    letter = fruit[index]\n",
-    "    print(letter)\n",
-    "    index = index + 1"
+    "    letter = fruit[index]\n",
+    "    print(letter)\n",
+    "    index = index + 1"
    ]
   },
   {
@@ -212,12 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "for letter in fruit:\n",
-    "    print(letter)"
+    "    print(letter)"
    ]
   },
   {
@@ -231,14 +325,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack\n",
+      "Kack\n",
+      "Lack\n",
+      "Mack\n",
+      "Nack\n",
+      "Oack\n",
+      "Pack\n",
+      "Qack\n"
+     ]
+    }
+   ],
    "source": [
     "prefixes = 'JKLMNOPQ'\n",
     "suffix = 'ack'\n",
     "for letter in prefixes:\n",
-    "    print(letter + suffix)"
+    "    print(letter + suffix)"
    ]
   },
   {
@@ -275,15 +384,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Monty'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> s = 'Monty Python'\n",
-    ">>> s[0:5]\n",
-    "'Monty'\n",
-    ">>> s[6:12]\n",
-    "'Python'"
+    ">>> s[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ">>> s[6:12]"
    ]
   },
   {
@@ -300,9 +437,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ban'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> fruit = 'banana'\n",
     ">>> fruit[:3]"
@@ -310,9 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ana'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> fruit[3:]"
    ]
@@ -326,9 +485,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> fruit = 'banana'\n",
     ">>> fruit[3:3]"
@@ -345,11 +515,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'banana'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ">> fruit[:]"
+    ">>> fruit[:]"
    ]
   },
   {
@@ -363,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,9 +577,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Jello, world!'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> new_greeting = 'J' + greeting[1:]\n",
     ">>> new_greeting"
@@ -422,17 +614,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find(word, letter):\n",
-    "    index = 0\n",
-    "    while index < len(word):\n",
-    "        if word[index] == letter:\n",
-    "            return index\n",
-    "        index = index + 1\n",
-    "    return-1"
+    "    index = 0\n",
+    "    while index < len(word):\n",
+    "        if word[index] == letter:\n",
+    "            return index\n",
+    "        index = index + 1\n",
+    "    return -1"
    ]
   },
   {
@@ -456,15 +648,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "word = 'banana'\n",
     "count = 0\n",
     "for letter in word:\n",
-    "    if letter == 'a':\n",
-    "        count = count + 1\n",
+    "    if letter == 'a':\n",
+    "        count = count + 1\n",
     "print(count)"
    ]
   },
@@ -487,9 +687,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BANANA'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> word = 'banana'\n",
     ">>> new_word = word.upper()\n",
@@ -509,9 +720,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> word = 'banana'\n",
     ">>> index = word.find('a')\n",
@@ -529,9 +751,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> word.find('na')"
    ]
@@ -545,9 +778,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> word.find('na', 3)"
    ]
@@ -561,9 +805,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> name = 'bob'\n",
     ">>> name.find('b', 1, 2)"
@@ -582,18 +837,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> 'a' in 'banana'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> 'seed' in 'banana'"
    ]
@@ -607,14 +884,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def in_both(word1, word2):\n",
-    "    for letter in word1:\n",
-    "        if letter in word2:\n",
-    "            print(letter)"
+    "    for letter in word1:\n",
+    "        if letter in word2:\n",
+    "            print(letter)"
    ]
   },
   {
@@ -628,9 +905,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "e\n",
+      "s\n"
+     ]
+    }
+   ],
    "source": [
     ">>> in_both('apples', 'oranges')"
    ]
@@ -646,12 +933,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All right, bananas.\n"
+     ]
+    }
+   ],
    "source": [
     "if word == 'banana':\n",
-    "    print('All right, bananas.')"
+    "    print('All right, bananas.')"
    ]
   },
   {
@@ -663,16 +958,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All right, bananas.\n"
+     ]
+    }
+   ],
    "source": [
     "if word < 'banana':\n",
-    "    print('Your word, ' + word + ', comes before banana.')\n",
+    "    print('Your word, ' + word + ', comes before banana.')\n",
     "elif word > 'banana':\n",
-    "    print('Your word, ' + word + ', comes after banana.')\n",
+    "    print('Your word, ' + word + ', comes after banana.')\n",
     "else:\n",
-    "    print('All right, bananas.')"
+    "    print('All right, bananas.')"
    ]
   },
   {
@@ -806,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,9 +1129,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 3\n",
+      "1 2\n",
+      "2 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> is_reverse('pots', 'stop')"
    ]
@@ -904,9 +1227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bnn'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> fruit = 'banana'\n",
     ">>> fruit[0:5:2]"
@@ -980,9 +1314,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> ord('c') - ord('a')"
    ]
@@ -1013,7 +1358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
