--- a/Capítulo 13 - Estudo de Caso -  Seleção de Estruturas de Dados.ipynb
+++ b/Capítulo 13 - Estudo de Caso -  Seleção de Estruturas de Dados.ipynb
@@ -23,9 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> import string\n",
     ">>> string.punctuation"
@@ -68,14 +79,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4955496815598438\n",
+      "0.9180668032794748\n",
+      "0.3524305836146444\n",
+      "0.3814771369846709\n",
+      "0.363635163487972\n",
+      "0.4999095782893753\n",
+      "0.3232119288638058\n",
+      "0.35934956001002727\n",
+      "0.641974931722074\n",
+      "0.2604589107492884\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "for i in range(10):\n",
-    "    x = random.random()\n",
-    "    print(x)"
+    "    x = random.random()\n",
+    "    print(x)"
    ]
   },
   {
@@ -87,18 +115,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> random.randint(5, 10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> random.randint(5, 10)"
    ]
@@ -112,9 +162,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> t = [1, 2, 3]\n",
     ">>> random.choice(t)"
@@ -122,9 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     ">>> random.choice(t)"
    ]
@@ -142,13 +214,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 2, 'b': 1}"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ">>> t = ['a', 'a', 'b']\n",
-    ">>> hist = histogram(t)\n",
-    ">>> hist"
+    "def histogram(s):\n",
+    "    d = dict ()\n",
+    "    for c in s:\n",
+    "        if c not in d:\n",
+    "            d[c] = 1\n",
+    "        else:\n",
+    "            d[c] += 1\n",
+    "    return d\n",
+    "t = ['a', 'a', 'b']\n",
+    "hist = histogram(t)\n",
+    "hist"
    ]
   },
   {
@@ -165,28 +256,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "import string\n",
     "\n",
     "def process_file(filename):\n",
-    "    hist = dict()\n",
-    "    fp = open(filename)\n",
-    "    for line in fp:\n",
-    "        process_line(line, hist)\n",
-    "    return hist\n",
+    "    hist = dict()\n",
+    "    fp = open(filename)\n",
+    "    for line in fp:\n",
+    "        process_line(line, hist)\n",
+    "    return hist\n",
     "\n",
     "def process_line(line, hist):\n",
-    "    line = line.replace('-', ' ')\n",
-    "    for word in line.split():\n",
-    "        word = word.strip(string.punctuation + string.whitespace)\n",
-    "        word = word.lower()\n",
-    "        hist[word] = hist.get(word, 0) + 1\n",
+    "    line = line.replace('-', ' ')\n",
+    "    for word in line.split():\n",
+    "        word = word.strip(string.punctuation + string.whitespace)\n",
+    "        word = word.lower()\n",
+    "        hist[word] = hist.get(word, 0) + 1\n",
     "\n",
-    "hist = process_file('emma.txt')"
+    "hist = process_file('emma.txt')```"
    ]
   },
   {
@@ -206,12 +296,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "def total_words(hist):\n",
-    "    return sum(hist.values())"
+    "    return sum(hist.values())"
    ]
   },
   {
@@ -223,12 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "def different_words(hist):\n",
-    "    return len(hist)"
+    "    return len(hist)"
    ]
   },
   {
@@ -239,13 +329,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "print('Total number of words:', total_words(hist))\n",
-    "print('Number of different words:', different_words(hist))"
+    "print('Number of different words:', different_words(hist))```"
    ]
   },
   {
@@ -276,16 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "def most_common(hist):\n",
-    "    t = []\n",
-    "    for key, value in hist.items():\n",
-    "        t.append((value, key))\n",
-    "    t.sort(reverse=True)\n",
-    "    return t"
+    "    t = []\n",
+    "    for key, value in hist.items():\n",
+    "        t.append((value, key))\n",
+    "    t.sort(reverse=True)\n",
+    "    return t"
    ]
   },
   {
@@ -296,15 +385,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "t = most_common(hist)\n",
     "print('The most common words are:')\n",
     "for freq, word in t[:10]:\n",
-    "    print(word, freq, sep='\\\\t')"
+    "    print(word, freq, sep='\\\\t')```"
    ]
   },
   {
@@ -344,15 +432,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_most_common(hist, num=10):\n",
-    "    t = most_common(hist)\n",
-    "    print('The most common words are:')\n",
-    "    for freq, word in t[:num]:\n",
-    "        print(word, freq, sep='\\\\t')"
+    "    t = most_common(hist)\n",
+    "    print('The most common words are:')\n",
+    "    for freq, word in t[:num]:\n",
+    "        print(word, freq, sep='\\\\t')"
    ]
   },
   {
@@ -365,12 +453,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print_most_common(hist)"
+    "```python\n",
+    "print_most_common(hist)```"
    ]
   },
   {
@@ -381,12 +468,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print_most_common(hist, 20)"
+    "```python\n",
+    "print_most_common(hist, 20)```"
    ]
   },
   {
@@ -406,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "def subtract(d1, d2):\n",
-    "    res = dict()\n",
-    "    for key in d1:\n",
-    "        if key not in d2:\n",
-    "            res[key] = None\n",
-    "    return res"
+    "    res = dict()\n",
+    "    for key in d1:\n",
+    "        if key not in d2:\n",
+    "            res[key] = None\n",
+    "    return res"
    ]
   },
   {
@@ -426,16 +512,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "words = process_file('words.txt')\n",
     "diff = subtract(hist, words)\n",
     "print(\"Words in the book that aren't in the word list:\")\n",
     "for word in diff:\n",
-    "    print(word, end=' ')"
+    "    print(word, end=' ')```"
    ]
   },
   {
@@ -475,15 +560,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_word(h):\n",
-    "    t = []\n",
-    "    for word, freq in h.items():\n",
-    "        t.extend([word] * freq)\n",
-    "    return random.choice(t)"
+    "    t = []\n",
+    "    for word, freq in h.items():\n",
+    "        t.extend([word] * freq)\n",
+    "    return random.choice(t)"
    ]
   },
   {
@@ -602,12 +687,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "def shift(prefix, word):\n",
-    "    return prefix[1:] + (word,)"
+    "    return prefix[1:] + (word,)"
    ]
   },
   {
@@ -739,7 +824,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
